workloads/rustfs/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rustfs-files
  namespace: default
spec:
  parentRefs:
    - name: shared-gateway
      sectionName: files-john2143-https
  hostnames:
    - files.john2143.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rustfs
          port: 9000
